# vs-samples

./: README.md  pyproject.toml
vssamples/: __init__.py  colorbars.py  enums.py  gradient.py
vssamples/artifacts/: __init__.py  avc_jpeg.py  dither.py  jpeg.py
vssamples/colorbars/: __init__.py  backend.py  colorbars.py  enums.py  function.py  presets.py  types.py
vssamples/signals/: __init__.py  gradient.py  loader.py
vssamples/signals/images/julia/: metadata.toml
vssamples/wrapper/: __init__.py  manager.py
