[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "vssamples"
description = "Vapoursynth sample generator"
version = "1.3.4"
license = {text = "MIT"}
authors = [
  { name = "OpusGang" },
]
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
  "VapourSynth >= 66",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/OpusGang/vs-samples"

[tool.setuptools.package-data]
vssamples = ["py.typed"]

[project.optional-dependencies]
dev = ["ruff", "toml"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]